--- a/www/templates/doctors.html
+++ b/www/templates/doctors.html
@@ -1,6 +1,6 @@
 <ion-header-bar class="bar bar-positive item-input-inset">
     <h1 class="title title-center" ng-if="!search.searchIcon">Doctors</h1>
-    <div class="bar bar-header item-input-inset bar-positive" ng-if="search.searchIcon">
+    <div class="bar bar-header bar-positive" ng-if="search.searchIcon">
         <label class="item-input-wrapper">
             <i class="icon ion-ios7-search placeholder-icon"></i>
             <input type="search" class="positive" ng-model="search.searchText" placeholder="Search">
@@ -9,21 +9,41 @@
             Cancel
         </button>
     </div>
-    <button class="button button-icon icon  ion-ios7-search-strong" ng-click="searchClicked()"
+    <button class="button button-icon ion-ios7-search-strong" ng-click="searchClicked()"
             ng-if="!search.searchIcon"></button>
 </ion-header-bar>
 <ion-content class="mt20">
+    <div class="row" ng-show="doc.tog">
+        <div class="col-offset-20">
+        </div>
+        <div class="col-offset-20"></div>
+        <div class="col-20 text-center"><i class="icon ion-man fs30"></i></div>
+        <div class="col-20 text-center"><i class="icon ion-flask fs30"></i></div>
+        <div class="col-20 text-center"><i class="icon ion-android-contacts fs30"></i></div>
+    </div>
     <div class="list card">
-        <a ng-repeat="doctor in allDocs | filter:search.searchText" href="#/doctor-patients/{{doctor.$id}}" class="item item-icon-left">
-            <i class="icon ion-person"></i>{{ doctor.name}}
+        <a ng-repeat="doctor in allDocs | filter:search.searchText" ng-class="{'small-font' : doc.tog , 'item-icon-left' : !doc.tog}"
+           href="#/doctor-patients/{{doctor.$id}}"
+           class="item">
+            <i class="icon ion-person" ng-hide="doc.tog"></i>{{doctor.name}}
+            <div class="row small-font" ng-show="doc.tog">
+                <div class="col-offset-33"></div>
+                <div class="col-25 text-center">{{doctor.patient}}</div>
+                <div class="col-25 text-center">{{doctor.material}}</div>
+                <div class="col-25 text-center">{{doctor.visdoc}}</div>
+            </div>
         </a>
     </div>
 </ion-content>
-<ion-footer-bar keyboard-attach>
+<ion-footer-bar>
     <div class="tabs tabs-icon-top">
         <a class="tab-item" href="#/doctorAdd">
             <i class="icon ion-ios7-plus positive"></i>
             Add Doctor
+        </a>
+        <a class="tab-item" ng-click="doc.expand();" ng-if="!search.searchIcon" >
+            <i class="icon" ng-class="{'ion-plus-round dark' : !doc.tog , 'ion-minus-round dark' : doc.tog}"></i>
+            <span ng-bind="doc.tog ? 'Collapse All' : 'Expand All'"></span>
         </a>
     </div>
 </ion-footer-bar>
