side menu and logout func added, search removed

--- a/www/templates/addDoctor.html
+++ b/www/templates/addDoctor.html
@@ -1,8 +1,9 @@
-<ion-header-bar class="bar bar-positive">
-    <h1 class="title title-center">{{txtFields.header}}</h1>
-</ion-header-bar>
-<ion-content class="mt20">
-    <ion-view view-title="AddDoctor">
+<ion-view>
+    <ion-nav-title>{{txtFields.header}}</ion-nav-title>
+    <ion-nav-buttons side="right">
+        <button menu-toggle="right" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
+    <ion-content class="mt20">
         <form ng-submit="docFuncs.buttonAction()">
             <div class="list">
                 <label class="item item-input item-icon-left">
@@ -25,13 +26,13 @@
                 <button class="button button-block button-positive" type="submit">{{txtFields.buttonTxt}}</button>
             </div>
         </form>
-    </ion-view>
-</ion-content>
-<ion-footer-bar>
-    <div class="tabs tabs-icon-top">
-        <a class="tab-item" href="#/">
-            <i class="icon ion-ios7-home positive"></i>
-            Doctors
-        </a>
-    </div>
-</ion-footer-bar>
+    </ion-content>
+    <ion-footer-bar>
+        <div class="tabs tabs-icon-top">
+            <a class="tab-item" href="#/app/doctors">
+                <i class="icon ion-ios7-home positive"></i>
+                Doctors
+            </a>
+        </div>
+    </ion-footer-bar>
+</ion-view>
