--- a/www/templates/addTxn.html
+++ b/www/templates/addTxn.html
@@ -1,54 +1,53 @@
-<ion-header-bar class="bar bar-positive">
-    <a href="#/patientDetails/{{patientInd}}/{{doctorIndex}}" class="button button-icon ion-ios7-arrow-back">
-    </a>
-    <h1 class="title ml70">{{txtFields.header}}</h1>
-</ion-header-bar>
-<ion-content class="mt20">
-    <ion-view view-title="AddDoctor">
-        <form name="form" ng-submit="txnFuncs.buttonAction()">
-            <div class="list">
-                    <ion-toggle ng-model="txn.payment" toggle-class="toggle-positive">Txn Type (Payment / Receipt)</ion-toggle>
-                <label class="item item-input item-icon-left">
-                    <i class="icon ion-calendar"></i>
-                    <span class="input-label ml35">Txn Date</span>
-                    <input type="tel" placeholder="12-12-2012" ng-required="true" ng-model="txn.date">
-                </label>
-                <label class="item item-input item-icon-left">
-                    <i class="icon ion-man"></i>
-                    <span class="input-label ml35">By Patient</span>
-                    <input type="tel" placeholder="5000" ng-required='!txn.visdoc && !txn.material' ng-model="txn.patient">
-                </label>
-                <label class="item item-input item-icon-left">
-                    <i class="icon ion-flask"></i>
-                    <span class="input-label ml35">Material</span>
-                    <input type="tel" placeholder="3000" ng-required='!txn.patient && !txn.visdoc' ng-model="txn.material">
-                </label>
-                <label class="item item-input item-icon-left">
-                    <i class="icon ion-android-contacts"></i>
-                    <span class="input-label ml35"> Visiting Doc</span>
-                    <input type="tel" placeholder="2000" ng-required='!txn.patient && !txn.material' ng-model="txn.visdoc">
-                </label>
-            </div>
-            <div class="padding">
-                <button class="button button-block button-positive" type="submit">{{txtFields.buttonTxt}}</button>
-            </div>
-        </form>
-    </ion-view>
-</ion-content>
-<ion-footer-bar>
-    <div class="tabs tabs-icon-top">
-        <a class="tab-item" href="#/">
-            <i class="icon ion-ios7-home positive"></i>
-            Doctors
-        </a>
-        <a class="tab-item" href="#/patientDetails/{{patientInd}}/{{doctorIndex}}">
-            <i class="icon ion-ios7-arrow-back positive"></i>
-            Back
-        </a>
-        <a class="tab-item" ng-show="txtFields.deleteEnabled" href="#/patientDetails/{{patientInd}}/{{doctorIndex}}"
-           ng-click="txnFuncs.removeTxn()">
-            <i class="icon ion-ios7-trash assertive"></i>
-            Delete
-        </a>
-    </div>
-</ion-footer-bar>
+<ion-view>
+    <ion-nav-title>{{txtFields.header}}</ion-nav-title>
+    <ion-nav-buttons side="right">
+        <button menu-toggle="right" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
+    <ion-content class="mt20">
+            <form name="form" ng-submit="txnFuncs.buttonAction()">
+                <div class="list">
+                    <ion-toggle ng-model="txn.payment" toggle-class="toggle-positive">Txn Type (Payment / Receipt)
+                    </ion-toggle>
+                    <label class="item item-input item-icon-left">
+                        <i class="icon ion-calendar"></i>
+                        <span class="input-label ml35">Txn Date</span>
+                        <input type="tel" placeholder="12-12-2012" ng-required="true" ng-model="txn.date">
+                    </label>
+                    <label class="item item-input item-icon-left">
+                        <i class="icon ion-man"></i>
+                        <span class="input-label ml35">By Patient</span>
+                        <input type="tel" placeholder="5000" ng-required='!txn.visdoc && !txn.material'
+                               ng-model="txn.patient">
+                    </label>
+                    <label class="item item-input item-icon-left">
+                        <i class="icon ion-flask"></i>
+                        <span class="input-label ml35">Material</span>
+                        <input type="tel" placeholder="3000" ng-required='!txn.patient && !txn.visdoc'
+                               ng-model="txn.material">
+                    </label>
+                    <label class="item item-input item-icon-left">
+                        <i class="icon ion-android-contacts"></i>
+                        <span class="input-label ml35"> Visiting Doc</span>
+                        <input type="tel" placeholder="2000" ng-required='!txn.patient && !txn.material'
+                               ng-model="txn.visdoc">
+                    </label>
+                </div>
+                <div class="padding">
+                    <button class="button button-block button-positive" type="submit">{{txtFields.buttonTxt}}</button>
+                </div>
+            </form>
+    </ion-content>
+    <ion-footer-bar>
+        <div class="tabs tabs-icon-top">
+            <a class="tab-item" href="#/app/doctors">
+                <i class="icon ion-ios7-home positive"></i>
+                Doctors
+            </a>
+            <a class="tab-item" ng-show="txtFields.deleteEnabled" href="#/patientDetails/{{patientInd}}/{{doctorIndex}}"
+               ng-click="txnFuncs.removeTxn()">
+                <i class="icon ion-ios7-trash assertive"></i>
+                Delete
+            </a>
+        </div>
+    </ion-footer-bar>
+</ion-view>
