--- a/www/templates/doctors.html
+++ b/www/templates/doctors.html
@@ -1,50 +1,42 @@
-<ion-header-bar class="bar bar-positive item-input-inset">
-    <h1 class="title title-center" ng-if="!search.searchIcon">Doctors</h1>
-    <div class="bar bar-header bar-positive" ng-if="search.searchIcon">
-        <label class="item-input-wrapper">
-            <i class="icon ion-ios7-search placeholder-icon"></i>
-            <input type="search" class="positive" ng-model="search.searchText" placeholder="Search">
-        </label>
-        <button class="button button-clear" ng-click="searchClicked()">
-            Cancel
-        </button>
-    </div>
-    <button class="button button-icon ion-ios7-search-strong" ng-click="searchClicked()"
-            ng-if="!search.searchIcon"></button>
-</ion-header-bar>
-<ion-content class="mt20 has-header has-footer">
-    <div class="row" ng-if="doc.tog">
-        <div class="col-offset-20">
-        </div>
-        <div class="col-offset-20"></div>
-        <div class="col-20 text-center"><i class="icon ion-man fs30"></i></div>
-        <div class="col-20 text-center"><i class="icon ion-flask fs30"></i></div>
-        <div class="col-20 text-center"><i class="icon ion-android-contacts fs30"></i></div>
-    </div>
-    <div class="list card">
-        <a ng-repeat="doctor in allDocs | filter:search.searchText"
-           ng-class="{'small-font' : doc.tog , 'item-icon-left' : !doc.tog}"
-           href="#/doctor-patients/{{doctor.$id}}"
-           class="item">
-            <i class="icon ion-person" ng-if="!doc.tog"></i>{{doctor.name}}
-            <div class="row" ng-if="doc.tog">
-                <div class="col-offset-33"></div>
-                <div class="col-25 text-center">{{doctor.patient}}</div>
-                <div class="col-25 text-center">{{doctor.material}}</div>
-                <div class="col-25 text-center">{{doctor.visdoc}}</div>
+<ion-view>
+    <ion-nav-title>Doctors</ion-nav-title>
+    <ion-nav-buttons side="right">
+        <button menu-toggle="right" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
+    <ion-content class="mt20 has-header has-footer">
+        <div class="row" ng-if="doc.tog">
+            <div class="col-offset-20">
             </div>
-        </a>
-    </div>
-</ion-content>
-<ion-footer-bar>
-    <div class="tabs tabs-icon-top">
-        <a class="tab-item" href="#/doctorAdd">
-            <i class="icon ion-ios7-plus positive"></i>
-            Add Doctor
-        </a>
-        <a class="tab-item" ng-click="doc.expand();" ng-if="!search.searchIcon">
-            <i class="icon" ng-class="{'ion-plus-round dark' : !doc.tog , 'ion-minus-round dark' : doc.tog}"></i>
-            <span ng-bind="doc.tog ? 'Collapse All' : 'Expand All'"></span>
-        </a>
-    </div>
-</ion-footer-bar>
+            <div class="col-offset-20"></div>
+            <div class="col-20 text-center"><i class="icon ion-man fs30"></i></div>
+            <div class="col-20 text-center"><i class="icon ion-flask fs30"></i></div>
+            <div class="col-20 text-center"><i class="icon ion-android-contacts fs30"></i></div>
+        </div>
+        <div class="list card">
+            <a ng-repeat="doctor in allDocs | filter:search.searchText"
+               ng-class="{'small-font' : doc.tog , 'item-icon-left' : !doc.tog}"
+               href="#/app/doctor-patients/{{doctor.$id}}"
+               class="item">
+                <i class="icon ion-person" ng-if="!doc.tog"></i>{{doctor.name}}
+                <div class="row" ng-if="doc.tog">
+                    <div class="col-offset-33"></div>
+                    <div class="col-25 text-center">{{doctor.patient}}</div>
+                    <div class="col-25 text-center">{{doctor.material}}</div>
+                    <div class="col-25 text-center">{{doctor.visdoc}}</div>
+                </div>
+            </a>
+        </div>
+    </ion-content>
+    <ion-footer-bar>
+        <div class="tabs tabs-icon-top">
+            <a class="tab-item" href="#/app/doctorAdd">
+                <i class="icon ion-ios7-plus positive"></i>
+                Add Doctor
+            </a>
+            <a class="tab-item" ng-click="doc.expand();">
+                <i class="icon" ng-class="{'ion-plus-round dark' : !doc.tog , 'ion-minus-round dark' : doc.tog}"></i>
+                <span ng-bind="doc.tog ? 'Collapse All' : 'Expand All'"></span>
+            </a>
+        </div>
+    </ion-footer-bar>
+</ion-view>
