side menu size reduced

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -6,7 +6,7 @@
         <ion-nav-view name="menuContent"></ion-nav-view>
     </ion-pane>
 
-    <ion-side-menu side="right">
+    <ion-side-menu side="right" width="myWidthValue +185">
         <header class="bar bar-header bar-stable">
             <h1 class="title">Menu</h1>
         </header>
