date picker added, report template created

--- a/www/templates/addPatient.html
+++ b/www/templates/addPatient.html
@@ -19,7 +19,7 @@
                 <label class="item item-input item-icon-left">
                     <i class="icon ion-calendar"></i>
                     <span class="input-label ml35">Start Date</span>
-                    <input type="tel" placeholder="12-12-2012" required ng-model="patient.startDate">
+                    <input type="date" required ng-model="patient.startDate">
                 </label>
                 <label class="item item-input item-icon-left">
                     <i class="icon ion-ios7-telephone"></i>
