--- a/www/templates/addTxn.html
+++ b/www/templates/addTxn.html
@@ -11,7 +11,7 @@
                     <label class="item item-input item-icon-left">
                         <i class="icon ion-calendar"></i>
                         <span class="input-label ml35">Txn Date</span>
-                        <input type="tel" placeholder="12-12-2012" ng-required="true" ng-model="txn.date">
+                        <input type="date" ng-required="true" ng-model="txn.date">
                     </label>
                     <label class="item item-input item-icon-left">
                         <i class="icon ion-man"></i>
