--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,8 +12,11 @@
         </header>
         <ion-content class="has-header mt20">
             <ion-list>
+                <ion-item nav-clear menu-close href="#/app/report">
+                    Report
+                </ion-item>
                 <ion-item nav-clear menu-close ng-click="logout();">
-                Logout
+                    Logout
                 </ion-item>
             </ion-list>
         </ion-content>
