report template created

--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -21,6 +21,36 @@
                 <button class="button button-block button-positive" type="submit">Submit</button>
             </div>
         </form>
+        <div class="list card">
+            <label class="item item-input">
+                <span class="input-label">Clinics</span>
+                <span class="ml30">20</span>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">Patients</span>
+                <span class="ml30">12</span>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">New Patients</span>
+                <span class="ml30">12</span>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">Revenue</span>
+                <div class="row">
+                    <div class="col-33 text-center"><i class="icon ion-man fs30"></i></div>
+                    <div class="col-33 text-center"><i class="icon ion-flask fs30"></i></div>
+                    <div class="col-33 text-center"><i class="icon ion-android-contacts fs30"></i></div>
+                </div>
+            </label>
+            <label class="item item-input">
+                <span class="input-label"></span>
+                <div class="row">
+                    <div class="col-33 text-center">123568</div>
+                    <div class="col-33 text-center">234129</div>
+                    <div class="col-33 text-center">345124</div>
+                </div>
+            </label>
+        </div>
     </ion-content>
     <ion-footer-bar>
         <div class="tabs tabs-icon-top">
