doc count issue fixed

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,6 +12,9 @@
         </header>
         <ion-content class="has-header mt20">
             <ion-list>
+                <ion-item nav-clear menu-close href="#/app/doctors">
+                    Doctors
+                </ion-item>
                 <ion-item nav-clear menu-close href="#/app/report">
                     Report
                 </ion-item>
