--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -8,12 +8,12 @@
             <div class="list">
                 <label class="item item-input item-icon-left">
                     <i class="icon ion-calendar"></i>
-                    <span class="input-label ml35">From Date</span>
+                    <span class="input-label ml35">From</span>
                     <input type="date" ng-required="true" ng-model="report.from">
                 </label>
                 <label class="item item-input item-icon-left">
                     <i class="icon ion-calendar"></i>
-                    <span class="input-label ml35">To Date</span>
+                    <span class="input-label ml35">To</span>
                     <input type="date" ng-required="true" ng-model="report.to">
                 </label>
             </div>
@@ -52,12 +52,4 @@
             </label>
         </div>
     </ion-content>
-    <ion-footer-bar>
-        <div class="tabs tabs-icon-top">
-            <a class="tab-item" href="#/app/doctors">
-                <i class="icon ion-ios7-home positive"></i>
-                Doctors
-            </a>
-        </div>
-    </ion-footer-bar>
 </ion-view>
